# tamarin-cleanroom

./: .gitignore  INTEGRATION_REPORT.md  PROTOCOL.md  README.md
console/: AUDIT.md  SPEC.md
console/workspace/cli-clean/: Cargo.toml
console/workspace/cli-clean/fixtures/: help_global.txt  version.tmpl
console/workspace/cli-clean/src/: args.rs  emit.rs  errors.rs  framing.rs  help.rs  lib.rs  main.rs  modes.rs  parse.rs  stream.rs  version.rs
console/workspace/cli-clean/tests/: cli_tests.rs
console/workspace/cli-clean/tests/fixtures/: batch_nslpk3_default.txt  batch_nslpk3_parseonly.txt  err_unreadable.txt  help_test.txt  help_variants.txt  interactive_two_pos.txt  r5_exists_verified.out.txt  r5_multi_warn_prove.out.txt  r5_nslpk3_prove_bound2.out.txt  r5_warn_lemma_default.out.txt  r6_diff_default.out.txt  r6_diff_false.out.txt  r6_diff_n5n6.out.txt  r6_diff_two_lemmas.out.txt  r6_multi_warn_two.out.txt  r7_yellowdiff_prove.out.txt  split_batch_multifile.err.txt  split_batch_output_single.out.txt  split_batch_prove.err.txt  split_parseonly_multi.out.txt  vv_derivcheck_x.err.txt  vv_outputmodule_bad.err.txt  vv_replication_x.err.txt  vv_stopontrace_xyz.err.txt
graphdot/workspace/graph-clean/: Cargo.toml
graphdot/workspace/graph-clean/src/: abbrev.rs  alloc.rs  doclayout.rs  dot.rs  generate.rs  lib.rs  model.rs  options.rs  pretty.rs  render.rs  term.rs
graphdot/workspace/graph-clean/tests/: abbrev_tests.rs  alloc_corpus.rs  census.rs  fill_census.rs  generate_tests.rs  parse_util.rs  regen_edges.rs  roundtrip.rs  width_probe.rs
graphdot/workspace/graph-clean/tests/fixtures/: cluster_multi.dot  cluster_process.dot  compact_abbrev.dot  compact_clusters.dot  empty.dot  invtrap_compressed.dot  invtrap_raw.dot  last_timepoint.dot  multi_abbrev.dot  nsl_invtrap.dot  simple_abbrev.dot  simple_ports.dot  wide_group.dot  wide_record.dot  wrap_E11.dot  wrap_E12.dot  wrap_E13.dot  wrap_E14.dot  wrap_W71.dot  wrap_W72.dot  wrap_W74.dot
injective/workspace/injfacts-clean/: Cargo.toml  README.md
injective/workspace/injfacts-clean/src/: ast.rs  lib.rs
injective/workspace/injfacts-clean/tests/: probes.rs
pretty/workspace/pretty-clean/: Cargo.toml
pretty/workspace/pretty-clean/src/: ast.rs  doc.rs  formula.rs  lemma.rs  lib.rs  macros.rs  rule.rs  signature.rs  term.rs  theory.rs  web.rs
pretty/workspace/pretty-clean/tests/: round1_term_signature.rs  round2_rules.rs  round3_formulas.rs  round4_blockers.rs  round5_theory.rs  round6_web.rs
weblayer/producers/workspace/producers-clean/: Cargo.toml
weblayer/workspace/web-clean/: Cargo.toml
weblayer/workspace/web-clean/examples/: corpus_html.rs
weblayer/workspace/web-clean/src/: assets.rs  dispatch.rs  envelope.rs  errors.rs  forms.rs  lib.rs  page.rs  route.rs  shell_template.rs
weblayer/workspace/web-clean/tests/: dispatch.rs  dispatch4.rs  dispatch5.rs  dispatch6.rs  dispatch7.rs  parity.rs
(+3920 files in other folders)
