[package]
name = "web-clean"
version = "0.1.0"
edition = "2021"
description = "Clean-room reimplementation of the tamarin-prover interactive web UI response bodies (HTML pages, JSON envelopes, DOT skeletons). Derived from black-box observation only."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lib]
path = "src/lib.rs"
